# MandelBrot_OpenGL

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
